@@ -1,4 +1,7 @@
 2006-01-18 David Brown <dmlb2000@gmail.com>
+	* info/patches/sws2_patches/suspend2-2.2-rc16-for-2.6.15.1.patch: added
+
+2006-01-18 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to 2.6.16-rc1-mm1
 	* info/patches/mm_patches/2.6.16-rc1-mm1: added
 
